--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </div>
                     
                     <div>
-                        <h2 class="about__subtitle">ANDROID APP DEVELOPMENTHi. I’m Pushpendra, nice to meet you. Please take a look around!</h2>
+                        <h2 class="about__subtitle">Hi. I’m Pushpendra, nice to meet you. Please take a look around!</h2>
                         <p class="about__text">I am currently pursuing final year Bachelor of Tachnology program in Computer Science and Engineering from Ambalika Institute of Management and Technology, Lucknow.<br>I am passionate about building softwares that improves the lives of those around me. I love computers and I am also highly interested in Cyber Security and Ethical Hacking.</p>           
                     </div>                                   
                 </div>
