--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         <input type="text" name="name" placeholder="Name" class="contact__input">
                         <input type="mail" name="_replyto" placeholder="Email" class="contact__input">
                         <textarea name="message" placeholder="Message" class="contact__input" id="" cols="0" rows="10" class="contact__input"></textarea>
-                        <input type="button" value="Send" class="contact__button button">
+                        <input type="submit" value="Send" class="contact__button button">
                     </form>
                 </div>
             </section>
