--- a/index.html
+++ b/index.html
@@ -223,6 +223,11 @@
                         <textarea name="message" placeholder="Message" class="contact__input" id="" cols="0" rows="10" class="contact__input"></textarea>
                         <input type="submit" value="Send" class="contact__button button">
                     </form>
+                    <form action="https://formspree.io/f/xeqpvzav" method="POST">
+  <input type="text" name="name">
+  <input type="email" name="_replyto">
+  <input type="submit" value="Send">
+</form>
                 </div>
             </section>
 
