--- a/index.html
+++ b/index.html
@@ -219,15 +219,10 @@
                 <div class="contact__container bd-grid">
                     <form action="https://formspree.io/f/xeqpvzav" method="POST" class="contact__form">
                         <input type="text" name="name" placeholder="Name" class="contact__input">
-                        <input type="mail" name="_replyto" placeholder="Email" class="contact__input">
+                        <input type="email" name="_replyto" placeholder="Email" class="contact__input">
                         <textarea name="message" placeholder="Message" class="contact__input" id="" cols="0" rows="10" class="contact__input"></textarea>
-                        <input type="submit" value="Send" class="contact__button button">
+                        <button type="submit" value="Send" class="contact__button button">
                     </form>
-                    <form action="https://formspree.io/f/xeqpvzav" method="POST">
-  <input type="text" name="name">
-  <input type="email" name="_replyto">
-  <input type="submit" value="Send">
-</form>
                 </div>
             </section>
 
