--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
 
                 <div class="home__img">    
-                    <img src="assets/img/perfil2.png" alt="">
+                    <img src="assets/img/home.jpg" alt="">
                 </div>
             </section>
 
@@ -186,7 +186,7 @@
 
                 <div class="work__container bd-grid">
                     <div class="work__img">
-                        <img src="assets/img/d1.png" alt="">
+                        <img src="assets/img/work4.jpg" alt="">
                     </div>
                     
                     <div>
@@ -200,7 +200,7 @@
 
                 <div class="work__container bd-grid">
                     <div class="work__img">
-                        <img src="assets/img/d2.png" alt="">
+                        <img src="assets/img/work5.jpg" alt="">
                     </div>
                     
                     <div>
