--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hello,<br>My name is <span class="home__title-color">Pushpendra</span><br>And I'm a <span class="home__title-color" id="type1"></span></h1>
 
-                    <a href="#" class="button">Download Resume</a>
+                    <a href="https://drive.google.com/file/d/1lyWVCmkDvMryV2dbflZuVffTbSu_ZUHd/view?usp=sharing" target="_blank" class="button">Download Resume</a>
                 </div>
 
                 <div class="home__social">
